Bring back TIP #414 to how it was originally

--- a/tip/414.md
+++ b/tip/414.md
@@ -15,7 +15,7 @@
 
 The ability to initialize just the lower level Tcl subsystems used to be part
 of the public API, now it is no longer exposed. This TIP proposes that it be
-re-exposed through the existing function Tcl\_SetPanicProc()
+re-exposed.
 
 # Rationale
 
@@ -29,31 +29,13 @@ the name of the executable available to Tcl scripts.
 
 # Proposed Change
 
-The functionality of the existing function Tcl\_SetPanicProc is extended,
-such that it does the initialization of the lower level Tcl subsystem as well.
-It (still) has a single argument, _panicProc_. When NULL, the default panic
-function is used. The return value, which used to be _void_ is changed to
-_const char *_ and it returns the version of the Tcl library which was
-initialized. The full signature is:
+A new function Tcl\_InitSubsystems, being a renamed TclInitSubsystems,
+should be exposed as alternative to Tcl\_FindExecutable in Tcl's C API. This
+will _not_ be a part of the Stub API; it is not intended to ever be used
+from an initialized stubbed environment, as it is meant to be used prior to
+the stub table being available. The full signature is:
 
- > const char \*
-   **Tcl\_SetPanicProc**\(
-       Tcl\_PanicProc \*_panicProc_\);
-
-# Use-cases
-
-In [androwish](http://www.androwish.org/index.html/info/4332aaffebe72eb1). TIP #414 is used to
-simplify the initialization: Since mounting the zip-file containing all Tcl library scripts
-needs the encodings initialized before creating the interpreter, this functions allows
-androwish to do so, without initializing the Tcl encodings twice (once before opening the
-ZIP-file, once again after the encodings inside this ZIP-file are available) 
-
-[RFE 854941](http://core.tcl.tk/tcl/info/854941), an original idea from David Graveraux,
-can be implemented on top of TIP #414. An [experimental implementation](http://core.tcl.tk/tcl/timeline?r=rfe-854941)
-is already there, it just needs to be rebased.
-
-An experiment for [fossil (branch "initsubsystems2")](https://www.fossil-scm.org/index.html/timeline?r=initsubsystems2)
-is already done, showing how to improve loading the Tcl shell dynamically into an already running application.
+ > void **Tcl\_InitSubsystems**\(void);
 
 # Reference Implementation
 
