--- a/tip/541.md
+++ b/tip/541.md
@@ -30,7 +30,7 @@ If <i>newIndex</i> is supplied, sets the combobox value to the element at positi
 
 # Implementation
 
-See the [`bug-2858503fff`](https://core.tcl-lang.org/tk/timeline?r=bug-2858503fff&unhide) branch. This branch includes implementation, updated documentation and new tests.
+See the [`bug-2858503fff`](https://core.tcl-lang.org/tk/timeline?r=bug-2858503fff&unhide) branch, aka [`tip-541`](https://core.tcl-lang.org/tk/timeline?r=tip-541&unhide). This branch includes implementation, updated documentation and new tests.
 
 The branch targets 8.6 since there is no danger of incompatibility: the new feature was an error case so far.
 
