Textual improvements for TIP #528 and #542

--- a/tip/528.md
+++ b/tip/528.md
@@ -12,6 +12,7 @@
 # Abstract
 
 This TIP proposes to deprecate `Tk_Offset()` in favour of [`offsetof()`](https://en.wikipedia.org/wiki/Offsetof).
+It will not be removed from the Tk headers, just from the documentation.
 
 # Rationale
 
@@ -19,7 +20,7 @@ The `Tk_Offset()` macro comes from the past, when C's official [`offsetof()`](ht
 macro didn't exist yet, or was not supported yet by all compilers.
 
 The main difference between `Tk_Offset()` and [`offsetof()`](https://en.wikipedia.org/wiki/Offsetof)
-is the type: `Tk_Offset()` gives an `int` while `offsetof()` gives a `size_t`. `size_t` is actually
+is the return type: `Tk_Offset()` returns an `int` while `offsetof()` returns a `size_t`. `size_t` is actually
 more correct, because it cannot become negative and it allows for values >= 4Gb on 64-bit platforms.
 
 # Proposed Change
@@ -33,10 +34,10 @@ This TIP doesn't propose to remove `Tk_Offset()` altogether, since there
 are too many extensions still using it.
 
 Further on, it makes sense to change various struct member types from
-`int` to `size_t`, to make room for this enhancements. For reasons
-of upwards compatibility, providing a smooth upgrade path, when
-compiling Tk against Tcl 8.x headers, the type of those struct
-members will continue to be `int`.
+`int` to `size_t`, so the size of the type matches the size returned
+by `offsetof()`. For reasons of upwards compatibility, providing a
+smooth upgrade path, when compiling Tk against Tcl 8.x headers, the
+type of those struct members will continue to be `int`.
 
 While on it, this TIP proposes to change the `src` and `dst` members
 of `Tk_ArgvInfo` from `char *` to `void *`. Although unrelated to
