--- a/tip/542.md
+++ b/tip/542.md
@@ -18,13 +18,30 @@ This TIP proposes to add more encodings, and being able to switch Tcl
 between Full Unicode mode (TCL\_UTF\_MAX>3, almost compatible with Androwish) and
 current partial Unicode mode (as far as TIP #389 goes, using TCL\_UTF\_MAX=3) 
 
-# Summary
-
-TODO
-
 # Rationale
 
-TODO
+Tcl currently can be compiled in 3 different modes: using TCL\_UTF\_MAX=3, TCL\_UTF\_MAX=4
+or TCL\_UTF\_MAX=6. The first 2 are actually equal now in Tcl 8.7 (since TIP #389). Using
+TCL\_UTF\_MAX=6 is actually overkill, since no utf-8 character consists of more than 4 bytes.
+
+Therefore it makes sense to reduce this to only two modes: TCL\_UTF\_MAX=3 means
+being fully compatible with Tcl 8.6, while TCL\_UTF\_MAX=4 means compatibility with
+the Androwish-version of Tcl. Defining TCL\_UTF\_MAX=6 results in a valid
+compilation as well (functioning the same as TCL\_UTF\_MAX=4), only some buffer-sizes
+will be 2 bytes larger than necessary.
+
+Androwish made the choice to use an (at that time) un-supported Tcl mode: Changing the size
+of the Tcl\_UniChar type using TCL\_UTF\_MAX=6. This causes a binary incompatibility
+which results that all extensions need to be re-compiled with TCL\_UTF\_MAX=6 as well.
+This TIP proposes to add a supported TCL\_UTF\_MAX=4 compilation mode to Tcl, which has
+the same effect as the earlier unsupported TCL\_UTF\_MAX=6, but without the need to
+re-compile all extensions. The need for re-compilation of all extensions is eliminated
+by putting the 32-bit versions of the Tcl\_UniChar-related functions in different stub
+entries than the 16-bit versions. This way, 99% of all extensions compiled with
+TCL\_UTF\_MAX=3 keep functioning as before without the need for re-compilation.
+
+The default compilation mode for Tcl will continue to be TCL\_UTF\_MAX=3, which is 100%
+upwards compatible with Tcl 8.6.
 
 # Specification
 
@@ -34,8 +51,8 @@ This document proposes:
 
  * Allow Tcl to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4.
    In the latter mode, the Tcl_UniChar type becomes a 32-bit type, but the stub entries for
-   the 16-bit Tcl\_UniChar type are present as well. So, extensions compiled with -DTCL\_UTF\_MAX=3
-   will continue to work in either Tcl mode.
+   the 16-bit Tcl\_UniChar type are present as well. So, most extensions compiled with -DTCL\_UTF\_MAX=3
+   will continue to work in either Tcl mode (for caveats, see below).
 
  * Allow Tcl extensions to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4,
    when Tcl is compiled with -DTCL\_UTF\_MAX=4.
@@ -59,18 +76,16 @@ This document proposes:
      
      Tcl\_Utf16CaseMatch()
 
-     Those are the same as the _UniChar_ variants, but they use "unsigned short" type in stead of Tcl\_UniChar. 
-
-TODO: everything else that comes up
+     Those are the same as the _UniChar_ variants, but they use the "unsigned short" type in stead of Tcl\_UniChar. 
 
 # Compatibility
 
-As long as Tcl is compiled with -DTCL\_UTF\_MAX=3, this is fully Upwards compatible.
+As long as Tcl is compiled with -DTCL\_UTF\_MAX=3, this is fully upwards compatible.
 
 When Tcl is compiled with -DTCL\_UTF\_MAX=4, this is at the Tcl level, compatible with the Androwish-version
-of Tcl with one exception: In Androwish the "unicode" encoding is 32-bit, in Tcl it
-continues to be 16-bit, an alias for "utf-16". At the C-API level, it's upwards compatible with
-Tcl 8.6, except for the following 5 functions: Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(),
+of Tcl with one exception: In Androwish the "unicode" encoding is 32-bit, in Tcl it continues
+to be 16-bit, an alias for "utf-16". At the C-API level, it's upwards compatible with Tcl 8.6 in
+TCL\_UTF\_MAX=6 mode, except for the following 5 functions: Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(),
 Tcl\_GetUnicode(), Tcl\_GetUnicodeFromObj() and Tcl\_AppendUnicodeToObj(). Using any of those 5 functions
 will result in a panic if the extension is compiled in a different mode than Tcl.
 
@@ -81,12 +96,13 @@ will result in a panic if the extension is compiled in a different mode than Tcl
    Tcl\_UniChar functions is called.
 
  * Internally, there is only one "Unicode" Tcl\_Obj-type. This means that any extension using
-   Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(), Tcl\_GetUnicode(), Tcl\_GetUnicodeFromObj() or Tcl\_AppendUnicodeToObj()
-   MUST be compiled in the same mode as Tcl.
+   Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(), Tcl\_GetUnicode(), Tcl\_GetUnicodeFromObj() or
+   Tcl\_AppendUnicodeToObj() MUST be compiled in the same mode as Tcl. Otherwise, a panic results
+   as soon as one of those functions is called.
 
 # Reference Implementation
 
-A reference implementation is ongoing in  the **utf-max** branch.
+A reference implementation is available in  the **utf-max** branch.
 <https://core.tcl.tk/tcl/timeline?r=utf-max>
 
 # Copyright
