Editorial tweaking of 537

--- a/tip/537.md
+++ b/tip/537.md
@@ -12,39 +12,38 @@
 
 # Abstract
  
-This TIP proposes to modify "struct Tcl\_RegExpInfo" and "struct Tcl\_RegExpIndices, such that the fields indicating indexes change from type "int" to type "size\_t"
+This TIP proposes to modify `struct Tcl_RegExpInfo` and `struct
+Tcl_RegExpIndices`, such that the fields indicating indexes change from type
+`int` to type `size_t`.
 
 # Rationale
 
-This TIP should have been part of TIP #502 (Index Value Reform) and/or TIP #494 (More use of size_t in Tcl 9), but it was overlooked. Without changing this public API, regular expression
+This TIP should have been part of [TIP #502](502.md) (Index Value Reform) and/or [TIP #494](494.md) (More use of `size_t` in Tcl 9), but it was overlooked. Without changing this public API, regular expression
 indexes never can exceed 2G in value.
 
 # Specification and Documentation
 
 Here are the new struct definitions:
-<pre>
-typedef struct Tcl\_RegExpInfo {
-    size\_t nsubs;
-    Tcl_RegExpIndices *matches;
-    size\_t extendStart;
-} Tcl\_RegExpInfo;
 
-typedef struct Tcl\_RegExpIndices {
-    size\_t start;
-    size\_t end;
-} Tcl\_RegExpIndices;
-</pre>
+    typedef struct Tcl_RegExpInfo {
+        size_t nsubs;
+        Tcl_RegExpIndices *matches;
+        size_t extendStart;
+    } Tcl_RegExpInfo;
+    
+    typedef struct Tcl_RegExpIndices {
+        size_t start;
+        size_t end;
+    } Tcl_RegExpIndices;
 
-Also a new macro TCL\_INDEX\_NONE will be provided, which is the value of the "start"/"end" fields when there is no match.
+Also a new macro `TCL_INDEX_NONE` will be provided, which is the value of the
+`start` and `end` fields when there is no match.
 This macro will be provided to 8.7 as well, but in Tcl 8.7 it will have the value (-1).
 
 # Implementation
 
 An implementation of this TIP is present in the [regexp-api-64bit](https://core.tcl-lang.org/tcl/timeline?r=regexp-api-64bit) branch. 
 
-
 # Copyright
 
 This document has been placed in the public domain.
-
-
