New TIP #544: Export TclGetIntForIndex()

--- a/tip/542.md
+++ b/tip/542.md
@@ -76,7 +76,10 @@ This document proposes:
      
      Tcl\_Utf16CaseMatch()
 
-     Those are the same as the _UniChar_ variants, but they use the "unsigned short" type in stead of Tcl\_UniChar. 
+     Those are the same as the _UniChar_ variants, but they use the "unsigned short" type in stead of Tcl\_UniChar.
+
+     Those functions can be used if you want your extension to compile with either -DTCL\_UTF\_MAX=3 or -DTCL\_UTF\_MAX=4,
+     but still want to use the 16-bit conversions independent on the TCL\_UTF\_MAX setting or Tcl\_UniChar type.
 
 # Compatibility
 
