Add a bit more info in TIP #544 (Tcl_GetIntForIndex)

--- a/tip/544.md
+++ b/tip/544.md
@@ -1,5 +1,6 @@
 # TIP 543: Export TclGetIntForIndex()
-	Author:         Jan Nijtmans <dgp@users.sourceforge.net>
+	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
+	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    8.7
@@ -29,7 +30,13 @@ For Tcl 9.0, all indexes have type size\_t, so there the signature is:
 # Rationale
 
 This function can be used for extensions to parse indexes like
-"end-5", "12+1" ... See [TIP 502: Index Value Reform](502.md)
+"end-5", "12+1" ... See [TIP 502: Index Value Reform](502.md) and
+[TIP 176: Add String index Values](176.md).
+
+Use case  in Tk: see
+[Tcl-core list discussion](http://code.activestate.com/lists/tcl-core/20663/)
+of
+[TIP 541: Add support for 'end' index in ttk::combobox current](176.md).
 
 # Compatibility
 
