Let's put ç where possible ;-)

--- a/tip/161.md
+++ b/tip/161.md
@@ -1,6 +1,6 @@
 # TIP 161: Change Default for Menu's -tearoff Option to False
 	Author:         Mark Roseman <mark@markroseman.com>
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
 	Vote:           Done
