--- a/tip/454.md
+++ b/tip/454.md
@@ -1,7 +1,7 @@
 # TIP 454: Automatically Resize Frames After Last Child Removed
 	Author:         Harald Oehlmann <Harald.Oehlmann@elmicron.de>
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Withdrawn
 	Type:           Project
 	Vote:           Done
