--- a/tip/492.md
+++ b/tip/492.md
@@ -1,5 +1,5 @@
 # TIP 492: Introspection for 'tk busy'
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
 	Vote:           Done
