--- a/tip/507.md
+++ b/tip/507.md
@@ -167,7 +167,7 @@ The **svg** format supports a wide range of [SVG][] features, however some featu
 
 # Discussion
 
-In <http://code.activestate.com/lists/tcl-core/19994/> Francois Vogel mentioned his concerns.
+In <http://code.activestate.com/lists/tcl-core/19994/> François Vogel mentioned his concerns.
 
 - A.1 Alternatives are described here at the end.
 - A.2 The interface is small (-format ...). Other, better implementations could provide it also.
