--- a/tip/517.md
+++ b/tip/517.md
@@ -1,5 +1,5 @@
 # TIP 517: Add -activerelief Configuration Option to the menu widget
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
 	Vote:           Done
