--- a/tip/535.md
+++ b/tip/535.md
@@ -1,5 +1,5 @@
 # TIP 535: Remove trailing zeroes in scale ticks
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
 	Vote:           Done
