--- a/tip/541.md
+++ b/tip/541.md
@@ -1,5 +1,5 @@
 # TIP 541: Add support for 'end' index in ttk::combobox current
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
