--- a/tip/544.md
+++ b/tip/544.md
@@ -1,6 +1,6 @@
 # TIP 544: Export TclGetIntForIndex()
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
-	Author:         Francois Vogel <fvogelnew1@free.fr>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    8.7
