--- a/tip/543.md
+++ b/tip/543.md
@@ -74,12 +74,12 @@ In Tcl 8.7, mark the use of the flag as deprecated in code and documentation.
 
 Existing *Tcl_VarTraceProc* that use the **TCL\_INTERP\_DESTROYED** flag
 will need to be converted to use **Tcl_InterpDeleted**() to work with
-Tcl 9. This includes Tk 8.7.
+Tcl 9. Tk 8.7 has now been so converted.
 
 # Reference Implementation
 
-Will be placed on
-branch [tip-543](https://core.tcl-lang.org/tcl/timeline?t=tip-543).
+See branches [tip-543](https://core.tcl-lang.org/tcl/timeline?t=tip-543).
+and [tip-543-9](https://core.tcl-lang.org/tcl/timeline?t=tip-543-9).
 
 # Copyright
 
