--- a/tip/262.md
+++ b/tip/262.md
@@ -3,7 +3,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        18-Mar-2006
 	Post-History:   
 	Keywords:       Tk,option
