--- a/tip/383.md
+++ b/tip/383.md
@@ -4,7 +4,7 @@
 	Author:         Donal K. Fellows <dkf@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        03-Dec-2010
 	Post-History:   
 	Keywords:       debugging,coroutine,yielded
