--- a/tip/431.md
+++ b/tip/431.md
@@ -3,7 +3,7 @@
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           Pending
+	Vote:           In progress
 	Created:        10-Sep-2014
 	Keywords:       Tcl, directory, file
 	Post-History:
