Added oo::class features

--- a/tip/510.md
+++ b/tip/510.md
@@ -18,55 +18,9 @@
 
 # Abstract
 
-## oo::class like widgets
-
-The new widgets are implemented in C as oo::classes. The base class is **tko::widget**. These class create and handles the internal Tk\_Window and provide **cget** and **configure** methods. The **configure** method has additional functionality to add or delete options. The new widget functionality is documented in the [`tkoWidget.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.n.md) file.
-
-The new widgets **graph** and **path** are implemented as **oo::class**. This will make it easy to extent the functionality. As an example see the file `.../library/graph.tcl` in which the method **binding** of the **graph** widget is implemented.
-
-## Enhanced **configure** functionality
-
-**configure** *args*
-
-> **configure**
-
-> > If *args* is empty the method will return a sorted list of all configuration options.
-
-> **configure** *-option*
-
-> > If we have one element in *args* starting with a minus sign ("-") then the method return the configuration list including the current value of the given *-option*.
-
-> **configure** *-option value ..*
-
-> > If we have an even number list in *args* and the first element starts with a minus sign ("-") then the method does configure all the given option-value pairs. If an error occurs the the corresponding element is not set and the method gives an error. Alrready successfull set options remain.
-
-> **configure init**
-
-> > This is an internal function used in constructing new widgets. It is used in the *unknown* method to initialize all options.
-
-> **configure optionadd** *-synonym -option*
-
-> > Add a *-synonym* for a given *-option*. The *-option* needs not to be defined at this time.
-
-> **configure optionadd** *-synonym dbnam dbclass ?default? ?flags?*
-
-> > Add a new option. If ?flags? is equal "1" then the option is readonly and can only be set in this call. Before adding a new option a *-option* method must created. The method will be called without any arguments. The method can access the new value using the *tko(-option)* array variable. If the method throws a n error the array variable will be reset to the old value.
-
-> **configure optiondel** *-option*
-
-> > Delete the given option and unset the entry in the tko array variable. The created *-option* method's are not deleted. This is the task of the caller.
-
-> **configure optionvar**
-
-> > The method return the global varname of the tko array variable holding all option values.
-
-## New widgets
-
 [Rbc][] aka "Refactored [BLT][] Components" have graph widgets and Tk commands which are missing in *Tk*.
 
 [Tkpath][] is a 2D-canvas like widget modelled after [SVG][].
-
-*Tk* has already **frame**, **labelframe** and **toplevel** widgets. These widgets have class like behaviour but are no real classes. It is p.e. not possible to add functionality to these widgets.
 
 This TIP intends to add the following commands to Tk:
 
@@ -87,9 +41,13 @@ option can only be set on creation time.
 
 > The new path widget will contain the [SVG][] like items and an additional **window** item to include other windows. Support functions will be placed in the **::path** namespace.
 
-**tko::frame** **tko::labelframe** and **tko::toplevel**
+New oo::class like widgets **tko::frame**, **tko::labelframe** and **tko::toplevel**
 
-> These widgets have the same functionality like the normal tk widgets. They are implemented as oo::classes and it is possible to add/delete options.
+> The new widgets will contain the same functionalite like the original *tk* widgets. They are *oo:class*'s and it is possible to add,change and delte methods and options dynamically. The widgets could also be used as oo *superclass*'s.
+
+New **tko::widget** oo base class for widgets.
+
+> The class provide the extended cget/configure tcl methods (see [`tkoWidget.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.n.md)) and a C interface (see [`tkoWidget.3.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.3.md)) to build new widgets.
 
 # Rationale
 
@@ -111,6 +69,12 @@ The original developer of [Tkpath][] passed away. There are some mirrors, but wi
 
 The intent of [Tkpath][] was to substitute the *Tk* canvas. This leads to problems with advanced features (matrix transformations). Therefore the new **path** widget will only contain [SVG][] like items. The only exception is the **window** item. This item is necessary to embed other widgets.
 
+## oo::class like widgets
+
+Currently there is no megawidget support core package. These tip will go some steps in this direction. With widgets as **oo::class**'s we can easyly extent existing widgets, just use it as a superclass. The provided cget/configure methods allow add, delete and changing of options. The implementation can be used in C and in Tcl.
+
+The new widgets **graph** and **path** are also implemented as **oo::class**. This will make it easy to extent the functionality. As an example see the file `.../library/graph.tcl` in which the method **binding** of the **graph** widget is implemented.
+
 # Implementation
 
 A patch implementing these changes is available in the fossil
@@ -118,85 +82,48 @@ repository in the [tip-510 branch](https://core.tcl.tk/tk/timeline?r=tip-510).
 
 ## Documentation
 
-Documentation is in markdown syntax understood by fossil and can therefore accessed online. The files will be put in the directory `.../doc/`.
+Documentation is available in md-Format in the .../doc/ directory.
 
-- [`tkoWidget.3.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.3.md) tko::widget C-function documentation
-- [`tkoWidget.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.n.md) tko::widget Tcl command documentation
+- [`tkoWidget.3.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.3.md) C interface
+- [`tkoWidget.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.n.md) Tcl interface
+- [`path.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/path.n.md) path widget documentation
 - [`graph.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/graph.n.md) graph widget documentation
 - [`vector.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/vector.n.md) graph::vector command documentation
-- [`path.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/path.n.md) path widget documentation
 
 ## C interface
 
-Alle new functionality is in the following header files:
+C-source interface files are in `.../generic/tko/`.  No functionality is currently exported.
 
-- [`tkoWidget.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoWidget.h) tko::widget function
-- [`tkoGraph.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoGraph.h) graph functions
-- [`tkoPath.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath.h) path functions
-
-No functionality is currently exported. The new files are  added to the makefiles.
-
-The initialization function **Tko\_Init** is added to the *tkInt.h* file and will be called in *tkWindow.c*.
+- [`tkoWidget.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoWidget.h) **tko::widget** C functions and definitions.
+- [`tkoPath.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath.h) **path** widget
+- [`tkoGraph.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoGraph.h) **graph** widget
 
 ## C sources
 
-C-source code will be put in the directory `.../generic/tko/`
+C-source code files are in `.../generic/tko/`. The new files are  added to the makefiles. The calls to the initialization functions are added in tkWindow.c
 
-- [`tkoWidget.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoWidget.c) tko::widget implementation
-- [`tkoFrame.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoFrame.c) tko::frame, tko::labelframe and tko::toplevel implementation
-- `tkoPath*.c` tkpath widget implementation
-- `tkoGraph*.c` graph widget implementation
-- `tkoRbc*.c` graph related common [Rbc][] functions.
-- `tkoVector*.c` graph vector commadn implementation
+- [`tkoFrame.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoFrame.c) **tko::frame**, **tko::labelframe** and **tko::toplevel** implementation
+- `tkoGraph*.[ch]` **graph** widget implementation
+- `tkoVector*.[ch]` **graph::vector** command implementation
+- `tkoRbc*.[ch]` Additional [Rbc][] commands used in **graph** and **graph::vector**
+- `tkoGraph*.[ch]` **path** widget implementation
+- [`tkoWidget.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoWidget.c) **tko::widget** base class implementation
 
-## Tcl source
+## Tcl sources
 
-Tcl-source code will be put in the directory `.../library/`
+Tcl-source code is in `.../library/`. The new files are added into `tk.tcl`.
 
 - [`graph.tcl`](https://core.tcl.tk/tk/doc/tip-510/library/graph.tcl) graph widget bindings
 - [`path.tcl`](https://core.tcl.tk/tk/doc/tip-510/library/path.tcl) path widget helper function under **::path**
 
 ## Tests
 
-Test files will be put in the directory `.../tests/tko/`
+Test files are available in the .../tests/tko/ directory.
 
-- [`tkoFrame.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoFrame.test) tko::frame, tko::labelframe and tko::toplevel widget tests. The tests are mostly identical to the corresponding tk widget tests.
-- [`tkoGraph.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoGraph.test) graph widget tests
-- [`tkoGraph_vector.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoGraph_vector.test) graph::vector command tests
-- [`tkoPath.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoPath.test) path widget tests
-
-# Examples
-
-Add options at class level:
-
-    oo::class create myWidget {
-      {*}$::tko::unknown
-      superclass ::tko::frame
-      variable tko
-      method -myoption {} {puts $tko(-myoption)}
-      method -myreadonly {} {puts $tko(-myreadonly)}
-      constructor {optionlist arglist} {
-        next [concat {
-          {-myoption myOption MyOption value}
-          {-myreadonly myReadonly MyReadonly value 1}
-        } $optionlist] $arglist
-      }
-    }
-
-Deal with optons at object level. This is the raw part. May be we should add some sugar to it.
-
-    myWidget .w
-    oo::objdefine .w method -o1 {} {puts $tko(-o1)}
-    oo::objdefine .w method -o2 {} {puts $tko(-o2)}
-    .w configure optionadd -o1 o1 O1 v1 1
-    .w configure optionadd -o2 o2 O2 v2
-    ...
-    .w optiondel -o1
-
-Widget option values are saved in an option array. The option name is the field name in the array. Additionally is an field "**.**" containing the tk widget path name of the widget. The name of the option array variable can be retrieved using the following code:
-    set myVar [.w configure optionvar]
-    parray $myVar
-
+- [`tkoFrame.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoFrame.test) tests from the tk frame.test file plus additional **oo::class** related tests
+- [`tkoGraph.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoGraph.test) **graph** widget tests
+- [`tkoGraph_vector.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoGraph_vector.test) **graph::vector** command tests
+- [`tkoPath.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoPath.test) **path** widget tests
 
 # Discussion
 
@@ -214,18 +141,18 @@ and with some analysis from Donal:
 # Open issues
 
 - Mac implementation of **graph** widget. May be borrow code from **path**
-- Remove or change old code in `generic/tko/tkoGraph*` and  `generic/tko/tkoRbc*` files <http://code.activestate.com/lists/tcl-core/20384/>
+- Remove or change old code in `generic/tko/*` files <http://code.activestate.com/lists/tcl-core/20384/>
 - Hardcoded usage of compiler and libraries in [`win/Makefile.in`](https://core.tcl.tk/tk/doc/tip-510/win/Makefile.in), [`win/makefile.vc`](https://core.tcl.tk/tk/doc/tip-510/win/makefile.vc) and [`unix/Makefile.in`](https://core.tcl.tk/tk/doc/tip-510/unix/Makefile.in) (search for "#RZ TODO").
 - Add **path** files in Mac implementation. It works at least in [Androwish][].
 - Which platforms should be used in **path**
-  - SDL/AGG: platform independent, more work is needed using [`tkoPath_SDLAGG.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_SDLAGGPath.cpp). See in [Androwish][]
+  - SDL/AGG: platform independent, more work is needed using [`tkoPath_SDLAGG.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_SDLAGG.cpp). See in [Androwish][]
   - GDI+ on Windows => working with [`tkoPath_WinGDIPlus.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_WinGDIPlus.cpp)
   - Cairo on unix => working with [`tkoPath_UnixCairo.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_UnixCairo.c)
   - For Mac see [`tkoPath_MacOSX.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_MacOSX.c)
 - Provide demos
 - Add more **path** tests
 - Is it necessary to translate the documentation into man format?
-- It is currently not possible to use unique abbreviations of slass method names p.e. "graph .g; .g conf" A workaround would be to add all those method names. May be this can be solved in tcl::oo directly?
+- It is currently not possible to use unique abbreviations of class method names p.e. "graph .g; .g conf" A workaround would be to add all those method names. May be this can be solved in tcl::oo directly?
 
 Any help especially with the Mac implementation would be great!
 
