CFV on 541 by FV

--- a/tip/541.md
+++ b/tip/541.md
@@ -2,7 +2,7 @@
 	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        8-May-2019
 	Post-History:   
 	Keywords:       Tcl
